src/objects/ProposedProjects__x.object
<CustomObject>
    <fields>
        <fullName>SIX_SIGMA_BLACKBELT_OWNER_ID__c</fullName>
        <description>SIX_SIGMA_BLACKBELT_OWNER_ID</description>
        <externalDeveloperName>SIX_SIGMA_BLACKBELT_OWNER_ID</externalDeveloperName>
        <label>SIX_SIGMA_BLACKBELT_OWNER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIX_SIGMA_BLACKBELT_OWNER__c</fullName>
        <description>SIX_SIGMA_BLACKBELT_OWNER</description>
        <externalDeveloperName>SIX_SIGMA_BLACKBELT_OWNER</externalDeveloperName>
        <label>SIX_SIGMA_BLACKBELT_OWNER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIX_SIGMA_WORK_TYPE_ID__c</fullName>
        <description>SIX_SIGMA_WORK_TYPE_ID</description>
        <externalDeveloperName>SIX_SIGMA_WORK_TYPE_ID</externalDeveloperName>
        <label>SIX_SIGMA_WORK_TYPE_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIX_SIGMA__c</fullName>
        <description>SIX_SIGMA</description>
        <externalDeveloperName>SIX_SIGMA</externalDeveloperName>
        <label>SIX_SIGMA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIZE_OF_EFFORT_ID__c</fullName>
        <description>SIZE_OF_EFFORT_ID</description>
        <externalDeveloperName>SIZE_OF_EFFORT_ID</externalDeveloperName>
        <label>SIZE_OF_EFFORT_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_REPORT__c</fullName>
        <description>START_REPORT</description>
        <externalDeveloperName>START_REPORT</externalDeveloperName>
        <label>START_REPORT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_ID__c</fullName>
        <description>STATUS_ID</description>
        <externalDeveloperName>STATUS_ID</externalDeveloperName>
        <label>STATUS_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS_REASON__c</fullName>
        <description>STATUS_REASON</description>
        <externalDeveloperName>STATUS_REASON</externalDeveloperName>
        <label>STATUS_REASON</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_REPORT_URI__c</fullName>
        <description>STATUS_REPORT_URI</description>
        <externalDeveloperName>STATUS_REPORT_URI</externalDeveloperName>
        <label>STATUS_REPORT_URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUMMARIZE_ALTERNATIVES__c</fullName>
        <description>SUMMARIZE_ALTERNATIVES</description>
        <externalDeveloperName>SUMMARIZE_ALTERNATIVES</externalDeveloperName>
        <label>SUMMARIZE_ALTERNATIVES</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPORTING_DETAILS__c</fullName>
        <description>SUPPORTING_DETAILS</description>
        <externalDeveloperName>SUPPORTING_DETAILS</externalDeveloperName>
        <label>SUPPORTING_DETAILS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMING_COMMENT__c</fullName>
        <description>TIMING_COMMENT</description>
        <externalDeveloperName>TIMING_COMMENT</externalDeveloperName>
        <label>TIMING_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTALCAPEX_AMOUNT__c</fullName>
        <description>TOTALCAPEX_AMOUNT</description>
        <externalDeveloperName>TOTALCAPEX_AMOUNT</externalDeveloperName>
        <label>TOTALCAPEX_AMOUNT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTALOPEX_AMOUNT__c</fullName>
        <description>TOTALOPEX_AMOUNT</description>
        <externalDeveloperName>TOTALOPEX_AMOUNT</externalDeveloperName>
        <label>TOTALOPEX_AMOUNT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIAGE_DATE__c</fullName>
        <description>TRIAGE_DATE</description>
        <externalDeveloperName>TRIAGE_DATE</externalDeveloperName>
        <label>TRIAGE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRIAGE_PRESENTER_ID__c</fullName>
        <description>TRIAGE_PRESENTER_ID</description>
        <externalDeveloperName>TRIAGE_PRESENTER_ID</externalDeveloperName>
        <label>TRIAGE_PRESENTER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIAGE_PRESENTER__c</fullName>
        <description>TRIAGE_PRESENTER</description>
        <externalDeveloperName>TRIAGE_PRESENTER</externalDeveloperName>
        <label>TRIAGE_PRESENTER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIAGE_PRIORITY__c</fullName>
        <description>TRIAGE_PRIORITY</description>
        <externalDeveloperName>TRIAGE_PRIORITY</externalDeveloperName>
        <label>TRIAGE_PRIORITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIAGE_REQUIRED__c</fullName>
        <description>TRIAGE_REQUIRED</description>
        <externalDeveloperName>TRIAGE_REQUIRED</externalDeveloperName>
        <label>TRIAGE_REQUIRED</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIAGE_SUMMARY__c</fullName>
        <description>TRIAGE_SUMMARY</description>
        <externalDeveloperName>TRIAGE_SUMMARY</externalDeveloperName>
        <label>TRIAGE_SUMMARY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_LABEL_10__c</fullName>
        <description>USER_DEFINDED_LABEL_10</description>
        <externalDeveloperName>USER_DEFINDED_LABEL_10</externalDeveloperName>
        <label>USER_DEFINDED_LABEL_10</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_LABEL_1__c</fullName>
        <description>USER_DEFINDED_LABEL_1</description>
        <externalDeveloperName>USER_DEFINDED_LABEL_1</externalDeveloperName>
        <label>USER_DEFINDED_LABEL_1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_LABEL_2__c</fullName>
        <description>USER_DEFINDED_LABEL_2</description>
        <externalDeveloperName>USER_DEFINDED_LABEL_2</externalDeveloperName>
        <label>USER_DEFINDED_LABEL_2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_VALUE_10__c</fullName>
        <description>USER_DEFINDED_VALUE_10</description>
        <externalDeveloperName>USER_DEFINDED_VALUE_10</externalDeveloperName>
        <label>USER_DEFINDED_VALUE_10</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_VALUE_1__c</fullName>
        <description>USER_DEFINDED_VALUE_1</description>
        <externalDeveloperName>USER_DEFINDED_VALUE_1</externalDeveloperName>
        <label>USER_DEFINDED_VALUE_1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_DEFINDED_VALUE_2__c</fullName>
        <description>USER_DEFINDED_VALUE_2</description>
        <externalDeveloperName>USER_DEFINDED_VALUE_2</externalDeveloperName>
        <label>USER_DEFINDED_VALUE_2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALUE_MEASUREMENT_PLAN__c</fullName>
        <description>VALUE_MEASUREMENT_PLAN</description>
        <externalDeveloperName>VALUE_MEASUREMENT_PLAN</externalDeveloperName>
        <label>VALUE_MEASUREMENT_PLAN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALUE_OF_EFFORT_ID__c</fullName>
        <description>VALUE_OF_EFFORT_ID</description>
        <externalDeveloperName>VALUE_OF_EFFORT_ID</externalDeveloperName>
        <label>VALUE_OF_EFFORT_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VALUE_SUMMARY_CHART__c</fullName>
        <description>VALUE_SUMMARY_CHART</description>
        <externalDeveloperName>VALUE_SUMMARY_CHART</externalDeveloperName>
        <label>VALUE_SUMMARY_CHART</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VALUE_SUMMARY_COMMENT__c</fullName>
        <description>VALUE_SUMMARY_COMMENT</description>
        <externalDeveloperName>VALUE_SUMMARY_COMMENT</externalDeveloperName>
        <label>VALUE_SUMMARY_COMMENT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WHO_AND_HOW_IMPACTED__c</fullName>
        <description>WHO_AND_HOW_IMPACTED</description>
        <externalDeveloperName>WHO_AND_HOW_IMPACTED</externalDeveloperName>
        <label>WHO_AND_HOW_IMPACTED</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_INITIATION_STATE_ID__c</fullName>
        <description>WORK_INITIATION_STATE_ID</description>
        <externalDeveloperName>WORK_INITIATION_STATE_ID</externalDeveloperName>
        <label>WORK_INITIATION_STATE_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WORK_ITEM_ID__c</fullName>
        <description>WORK_ITEM_ID</description>
        <externalDeveloperName>WORK_ITEM_ID</externalDeveloperName>
        <label>WORK_ITEM_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_ITEM_NAME__c</fullName>
        <description>WORK_ITEM_NAME</description>
        <externalDeveloperName>WORK_ITEM_NAME</externalDeveloperName>
        <label>WORK_ITEM_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_SPONSOR_ID__c</fullName>
        <description>WORK_SPONSOR_ID</description>
        <externalDeveloperName>WORK_SPONSOR_ID</externalDeveloperName>
        <label>WORK_SPONSOR_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_SPONSOR__c</fullName>
        <description>WORK_SPONSOR</description>
        <externalDeveloperName>WORK_SPONSOR</externalDeveloperName>
        <label>WORK_SPONSOR</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_STREAM_LEAD_ID__c</fullName>
        <description>WORK_STREAM_LEAD_ID</description>
        <externalDeveloperName>WORK_STREAM_LEAD_ID</externalDeveloperName>
        <label>WORK_STREAM_LEAD_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_STREAM_LEAD__c</fullName>
        <description>WORK_STREAM_LEAD</description>
        <externalDeveloperName>WORK_STREAM_LEAD</externalDeveloperName>
        <label>WORK_STREAM_LEAD</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_TYPE_ID__c</fullName>
        <description>WORK_TYPE_ID</description>
        <externalDeveloperName>WORK_TYPE_ID</externalDeveloperName>
        <label>WORK_TYPE_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProposedProjects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>WORK_ITEM_ID__c</columns>
        <columns>WORK_ITEM_NAME__c</columns>
        <columns>BUSINESS_AREA_IMPACTED__c</columns>
        <columns>ACTUAL_END_DATE__c</columns>
        <columns>CAPEX_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ProposedProjects</pluralLabel>
</CustomObject>